# artifacts/api-server/src/routes/index.ts
@@ -2,7 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import productsRouter from "./products";
 import ordersRouter from "./orders";
-import paystackRouter from "./paystack";
+import monnifyRouter from "./monnify";
 import usersRouter from "./users";
 import adminRouter from "./admin";
 import autologinRouter from "./autologin";
@@ -14,7 +14,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(productsRouter);
 router.use(ordersRouter);
-router.use(paystackRouter);
+router.use(monnifyRouter);
 router.use(deviceTrackingMiddleware);
 router.use(usersRouter);
 router.use(adminRouter);
